# cephdu

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: app.rs  ceph.rs  fs.rs  main.rs  navigation.rs  popup.rs  ui.rs
