[package]
name = "cephdu"
version = "0.2.1"
edition = "2024"
description = "A ncdu-like TUI for the Ceph File System, using xattrs instead of crawling"
license = "MIT"
authors = ["Lehman Garrison"]
repository = "https://github.com/flatironinstitute/cephdu"
keywords = ["ceph", "tui", "ncdu", "disk-usage"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
lazy_static = "1.5.0"
libc = "0.2.170"
ratatui = "0.29.0"
